--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 	<style type="text/css">
 /*li{list-style:url('LI Icon.jpg');}*/
 ul{font-size: 25px;font-weight: bold; width: 250px;}
-li{list-style:url('images.jpg'); padding: 10px;}
-li:hover{ list-style:url('images1.jpg');background-color:#CCC; font-size: 30px;color: #dd2545;}
+li{list-style:url('images.jpg'); padding: 10px; cursor: pointer;}
+li:hover{ list-style:url('images1.jpg'); font-size: 30px;color: #dd2545;}
 	</style>
 	</head>
 	<body>
-		<ul id="ddd">
+		<ul >
 			<li>1...............</li>
-			<ul id="d2">
+			<ul>
 				<li>test1</li>
 				<li>test2</li>
 				<li>test3</li>
